src/syntax/parser/snapshots/hebi__syntax__parser__tests__class_stmt-4.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| class T: [4;31ma[0m = b


