src/syntax/parser/snapshots/hebi__syntax__parser__tests__class_stmt-5.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| class T: [4;31mfn[0m


