src/syntax/parser/snapshots/hebi__syntax__parser__tests__class_stmt-6.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| [4;31m([0mU): pass


