src/syntax/parser/snapshots/hebi__syntax__parser__tests__class_stmt-8.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
fields may not appear after methods
| [4;31ma[0m


