src/syntax/parser/snapshots/hebi__syntax__parser__tests__class_stmt.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Class(
            Class {
                name: Ident(
                    "T",
                ),
                parent: None,
                members: ClassMembers {
                    fields: [],
                    methods: [],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: Ident(
                    "T",
                ),
                parent: None,
                members: ClassMembers {
                    fields: [],
                    methods: [],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: Ident(
                    "T",
                ),
                parent: None,
                members: ClassMembers {
                    fields: [],
                    methods: [
                        Func {
                            name: Ident(
                                "f",
                            ),
                            params: Params {
                                has_self: false,
                                pos: [
                                    (
                                        Ident(
                                            "v",
                                        ),
                                        None,
                                    ),
                                ],
                            },
                            body: [
                                Pass,
                            ],
                            has_yield: false,
                        },
                    ],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: Ident(
                    "T",
                ),
                parent: None,
                members: ClassMembers {
                    fields: [
                        Field {
                            name: Ident(
                                "a",
                            ),
                            default: Some(
                                GetVar(
                                    GetVar {
                                        name: Ident(
                                            "b",
                                        ),
                                    },
                                ),
                            ),
                        },
                    ],
                    methods: [
                        Func {
                            name: Ident(
                                "f",
                            ),
                            params: Params {
                                has_self: false,
                                pos: [
                                    (
                                        Ident(
                                            "v",
                                        ),
                                        None,
                                    ),
                                ],
                            },
                            body: [
                                Pass,
                            ],
                            has_yield: false,
                        },
                    ],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: Ident(
                    "T",
                ),
                parent: Some(
                    Ident(
                        "U",
                    ),
                ),
                members: ClassMembers {
                    fields: [],
                    methods: [],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: Ident(
                    "T",
                ),
                parent: Some(
                    Ident(
                        "U",
                    ),
                ),
                members: ClassMembers {
                    fields: [],
                    methods: [],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: Ident(
                    "T",
                ),
                parent: Some(
                    Ident(
                        "U",
                    ),
                ),
                members: ClassMembers {
                    fields: [
                        Field {
                            name: Ident(
                                "a",
                            ),
                            default: Some(
                                GetVar(
                                    GetVar {
                                        name: Ident(
                                            "b",
                                        ),
                                    },
                                ),
                            ),
                        },
                    ],
                    methods: [],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: Ident(
                    "T",
                ),
                parent: Some(
                    Ident(
                        "U",
                    ),
                ),
                members: ClassMembers {
                    fields: [
                        Field {
                            name: Ident(
                                "a",
                            ),
                            default: Some(
                                GetVar(
                                    GetVar {
                                        name: Ident(
                                            "b",
                                        ),
                                    },
                                ),
                            ),
                        },
                    ],
                    methods: [
                        Func {
                            name: Ident(
                                "f",
                            ),
                            params: Params {
                                has_self: false,
                                pos: [
                                    (
                                        Ident(
                                            "v",
                                        ),
                                        None,
                                    ),
                                ],
                            },
                            body: [
                                Pass,
                            ],
                            has_yield: false,
                        },
                    ],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: Ident(
                    "T",
                ),
                parent: Some(
                    Ident(
                        "U",
                    ),
                ),
                members: ClassMembers {
                    fields: [
                        Field {
                            name: Ident(
                                "a",
                            ),
                            default: Some(
                                GetVar(
                                    GetVar {
                                        name: Ident(
                                            "b",
                                        ),
                                    },
                                ),
                            ),
                        },
                    ],
                    methods: [
                        Func {
                            name: Ident(
                                "f",
                            ),
                            params: Params {
                                has_self: false,
                                pos: [
                                    (
                                        Ident(
                                            "v",
                                        ),
                                        None,
                                    ),
                                ],
                            },
                            body: [
                                Pass,
                            ],
                            has_yield: false,
                        },
                    ],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: Ident(
                    "T",
                ),
                parent: None,
                members: ClassMembers {
                    fields: [
                        Field {
                            name: Ident(
                                "a",
                            ),
                            default: None,
                        },
                    ],
                    methods: [],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: Ident(
                    "T",
                ),
                parent: Some(
                    Ident(
                        "U",
                    ),
                ),
                members: ClassMembers {
                    fields: [
                        Field {
                            name: Ident(
                                "a",
                            ),
                            default: None,
                        },
                    ],
                    methods: [],
                    meta: [],
                },
            },
        ),
    ],
}
