src/syntax/parser/snapshots/hebi__syntax__parser__tests__ctrl_stmt-2.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
return outside of function
| [4;31mreturn[0m v


