src/syntax/parser/snapshots/hebi__syntax__parser__tests__ctrl_stmt-4.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
continue outside of loop
| [4;31mcontinue[0m


