src/syntax/parser/snapshots/hebi__syntax__parser__tests__ctrl_stmt-5.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
break outside of loop
| [4;31mbreak[0m


