src/syntax/parser/snapshots/hebi__syntax__parser__tests__dict_literal_expr.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Expr(
            Literal(
                Dict(
                    [
                        (
                            Literal(
                                String(
                                    "a",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "c",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "d",
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "e",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "f",
                                },
                            ),
                        ),
                    ],
                ),
            ),
        ),
        Expr(
            Literal(
                Dict(
                    [
                        (
                            Literal(
                                String(
                                    "a",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "c",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "d",
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "e",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "f",
                                },
                            ),
                        ),
                    ],
                ),
            ),
        ),
        Expr(
            Literal(
                Dict(
                    [
                        (
                            Literal(
                                String(
                                    "a",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "c",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "d",
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "e",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "f",
                                },
                            ),
                        ),
                    ],
                ),
            ),
        ),
    ],
}
