src/syntax/parser/snapshots/hebi__syntax__parser__tests__duplicate_fields-2.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
duplicate field a
| fn [4;31ma[0m


